--- a/src/app/providers/provider/provider-detail/provider-detail.component.html
+++ b/src/app/providers/provider/provider-detail/provider-detail.component.html
@@ -224,10 +224,10 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular #agGrid style="width: 100%; height: 267px;" class="ag-theme-alpine" [rowData]="bankList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="bankRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onBanksGridReady($event)">
-                            <ag-grid-column headerName="Bank" field="xbanco" [width]="259" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Account Type" field="xtipocuentabancaria" [width]="259" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Account Number" field="xnumerocuenta" [width]="259" [sortable]="false"></ag-grid-column>
+                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="bankList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="bankRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onBanksGridReady($event)">
+                            <ag-grid-column headerName="Banco" field="xbanco" [width]="259" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Cuenta Bancaria" field="xtipocuentabancaria" [width]="259" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Numero de Cuenta" field="xnumerocuenta" [width]="259" [sortable]="false"></ag-grid-column>
                             <ag-grid-column headerName="Principal" field="xprincipal" [width]="259" [sortable]="false"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
@@ -309,9 +309,9 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular #agGrid style="width: 100%; height: 267px;" class="ag-theme-alpine" [rowData]="serviceList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServicesGridReady($event)">
-                            <ag-grid-column headerName="Name" field="xservicio" [width]="518" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Type" field="xtiposervicio" [width]="518" [sortable]="true"></ag-grid-column>
+                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServicesGridReady($event)">
+                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="518" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Tipo" field="xtiposervicio" [width]="518" [sortable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
                 </div>
