--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -232,7 +232,7 @@
                 <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev5">Suma asegurada de Casco</label>
-                    <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }" />
+                    <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }" (change)="calculation()"/>
                     <div *ngIf="submitted && search_form.get('msuma_aseg').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('msuma_aseg').errors.required">Se requiere completar el campo</div>
                     </div>
@@ -250,7 +250,7 @@
                 <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev5">Prima de casco bruta</label>
-                    <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }" />
+                    <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }"/>
                     <div *ngIf="submitted && search_form.get('mprima_casco').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('mprima_casco').errors.required">Se requiere completar el campo</div>
                     </div>
@@ -259,7 +259,7 @@
                 <div class="col-md-2 mb-4 pb-2">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev4">Descuento</label>
-                    <input type="number" formControlName="pdescuento" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('pdescuento').errors }" />
+                    <input type="number" formControlName="pdescuento" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('pdescuento').errors }" (change)="data()"/>
                     <div *ngIf="submitted && search_form.get('pdescuento').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('pdescuento').errors.required">Se requiere completar el campo</div>
                     </div>
