--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -198,6 +198,7 @@
                       </div>
                     </div>
                   </div>
+                  <div><button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="generateTarifa()">Calcular Tarifas</button></div>
 
                 </div>
               </div>
@@ -206,7 +207,6 @@
             <div class="cards">
              <div class="card-header company-card-header">
                <h5 class="card-title">Detalles del plan</h5>
-               <div class="buton"><button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="generateTarifa()">Calcular Tarifas</button></div>
              </div>
               <div class="row" style="padding: 10px;">
                 <div class="col-md-4 mb-4 pb-2">
