--- a/src/app/events/notification/notification-index/notification-index.component.html
+++ b/src/app/events/notification/notification-index/notification-index.component.html
@@ -46,7 +46,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <!-- <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.NOTIFICATIONS.ASSOCIATE" | translate }}</label>
                                     <select formControlName="casociado" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('casociado').errors }">
@@ -56,7 +56,7 @@
                                     <div *ngIf="submitted && search_form.get('casociado').errors"  class="invalid-feedback">
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.NOTIFICATIONS.CREATIONDATE" | translate }}</label>
