--- a/src/app/subscription/fleet-contract-individual/receipt-generation/receipt-generation.component.css
+++ b/src/app/subscription/fleet-contract-individual/receipt-generation/receipt-generation.component.css
@@ -1,9 +1,9 @@
-footer{
-    background-color: #132646;
-    border-top-style: solid;
-    border-color: white;
-}
-
-h3,h6{
-    color: white;
-}
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
