--- a/src/app/subscription/fleet-contract-individual/receipt-generation/receipt-generation.component.html
+++ b/src/app/subscription/fleet-contract-individual/receipt-generation/receipt-generation.component.html
@@ -3,232 +3,30 @@
 <section>
   <div>
     <div class="row d-flex justify-content-center align-items-center h-100">
-     <form>
       <div class="row g-0">
        <div class="card">
         <div class="card-header company-card-header"><h5 class="card-title">Detalles del Recibo</h5></div>
         <div class="row" style="padding: 10px;">
           <div class="col-md-4 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Monto Total</label>
-              <select formControlName="cplan" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cplan').errors }">
-                <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
-              </select>
-              <div *ngIf="submitted && search_form.get('cplan').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('cplan').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label">Frecuencia de pago</label>
-              <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors } ">
-                <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id}}">{{ metodologia.value }}</option>
-              </select>
-              <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Corredor</label>
-              <select formControlName="ccorredor" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ccorredor').errors } ">
-                <option *ngFor="let corredor of corredorList" value="{{ corredor.id }}">{{ corredor.value }}</option>
-              </select>
-              <div *ngIf="submitted && search_form.get('ccorredor').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('ccorredor').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <!-- <div class="col-md-3 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label">Pago fraccionado</label>
-              <section class="example-section" [formGroup]="search">
-                <mat-checkbox formControlName="fraccionado">fraccionado</mat-checkbox>
-              </section>
-            </div>
-          </div> -->
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Fecha de emisión</label>
-              <input type="date" formControlName="femision" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('femision').errors }" />
-              <div *ngIf="submitted && search_form.get('femision').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('femision').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Fecha desde (Poliza)</label>
-              <input type="date" formControlName="fdesde_pol" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde_pol').errors }" />
-              <div *ngIf="submitted && search_form.get('fdesde_pol').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('fdesde_pol').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Fecha hasta (Poliza)</label>
-              <input type="date" formControlName="fhasta_pol" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta_pol').errors }" />
-              <div *ngIf="submitted && search_form.get('fhasta_pol').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('fhasta_pol').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Fecha desde (Recibo)</label>
-              <input type="date" formControlName="fdesde_rec" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde_rec').errors }" />
-              <div *ngIf="submitted && search_form.get('fdesde_rec').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('fdesde_rec').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Fecha hasta (Recibo)</label>
-              <input type="date" formControlName="fhasta_rec" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta_rec').errors }"/>                       
-              <div *ngIf="submitted && search_form.get('fhasta_rec').errors"  class="invalid-feedback">
-                <div *ngIf="search_form.get('fhasta_rec').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">                        
-              <label class="form-label" for="form3Examplev4">Cobertura</label>
-              <select formControlName="xcobertura" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcobertura').errors } ">
-                <option value="RCV">RCV</option>
-                <option value="AMPLIA">AMPLIA</option>
-                <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
-              </select>                         
-               <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
-                <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Suma asegurada de Casco</label>
-              <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }" />
-              <div *ngIf="submitted && search_form.get('msuma_aseg').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('msuma_aseg').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Tarifa de casco</label>
-              <input type="number" formControlName="mtarifa" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mtarifa').errors }" />
-              <div *ngIf="submitted && search_form.get('mtarifa').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('mtarifa').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Prima de casco bruta</label>
-              <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }" />
-              <div *ngIf="submitted && search_form.get('mprima_casco').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('mprima_casco').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Catastrofico</label>
-              <input type="number" formControlName="mcatastrofico" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mcatastrofico').errors }" />
-              <div *ngIf="submitted && search_form.get('mcatastrofico').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('mcatastrofico').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev5">Prima de blindaje</label>
-              <input type="number" formControlName="mprima_blindaje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_blindaje').errors }" />
-              <div *ngIf="submitted && search_form.get('mprima_blindaje').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('mprima_blindaje').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 mb-4 pb-2">
-            <div class="form-outline">
-              <label class="form-label" for="form3Examplev4">Suma asegurada de blindaje</label>
-              <input type="number" formControlName="msuma_blindaje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_blindaje').errors }" />
-              <div *ngIf="submitted && search_form.get('msuma_blindaje').errors" class="invalid-feedback">
-                <div *ngIf="search_form.get('msuma_blindaje').errors.required">Se requiere completar el campo</div>
-              </div>
-            </div>
-          </div>
-          <div class="button">
-            <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" >Subscribir </button>
+            <form class="example-form"><label>Number</label>
+              <mat-form-field class="example-full-width" appearance="fill">
+                
+                <input type="text"
+                       aria-label="Number"
+                       matInput
+                       [formControl]="myControl"
+                       [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete">
+                  <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                    {{option}}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </form>
           </div>
         </div> 
        </div>
       </div>
-     </form>
     </div>
   </div>
 </section>
-
-
-
-<footer>    
-    <div class="container">       
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="footer-widget">
-            <h3 style="margin-right: 110px;">Horario</h3>
-            <div class="footer-widget-content">
-              <div class="open-time ">
-                  <ul class="opening-time">
-                    <li><span></span><h6>Horario disponible de Lunes a Viernes</h6>
-                    <li><span></span><h6><strong>A partir de :</strong> 8am - 4pm</h6>
-                  </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="footer-widget" style="margin-top: 50px;text-align: -webkit-center;">
-            <h6 >Copyright© CompuAmerica 2022.</h6>
-            <div class="footer-widget-content">
-                <br>
-                <h6>6 C. Negrín, Caracas 1050, Frente al CC. El Recreo. Distrito Capital</h6>
-                <div class="footer-social">
-            </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="footer-widget">
-            <h3>Redes Sociales</h3>
-            <div class="footer-widget-content" style=" text-align: -webkit-center;">
-              <div class="images-gellary">
-                <p></p>
-                <table style="margin-left: 25px;">
-                  <tr>
-                    <td>
-                      <ul>
-                        <li ><a href="https://www.facebook.com/Mundial Autos-Sas-107360681039695" target="_blank"><img  style="border-radius: 6px;background-color: #ffffff7d;" src="./assets/imagenes/facebook.png" alt="Instagram 01" width="40px" height="40px"></a></li>
-                        <br>
-                        <li><a href="https://www.instagram.com/Mundial Autoss.vzla/?hl=es-la" target="_blank"><img style="background-color: #ffffff7d;border-radius: 15px;" src="./assets/imagenes/instagram.png" alt="Instagram 02" width="40px" height="40px"></a></li>
-                      </ul>
-                    </td>
-                    <td>
-                      <ul>
-                        <li style="border-radius: 15px;"><a  href="https://twitter.com/Mundial Autos" target="_blank"><img style="background-color: #ffffff7d;" src="./assets/imagenes/twitter.png" alt="Instagram 01" width="40px" height="40px"></a></li>
-                        <br>
-                        <li style="border-radius: 15px;"><a href="https://co.linkedin.com/company/linkedin-com-company-Mundial Autossas" target="_blank"><img  style="background-color: #ffffff7d"src="./assets/imagenes/linkedin.png"  width="40px" height="40px"></a></li>
-                      </ul>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
