--- a/src/app/administration/collection/collection-detail/collection-detail.component.html
+++ b/src/app/administration/collection/collection-detail/collection-detail.component.html
@@ -123,6 +123,11 @@
                                 </button>
                                 </div>
                             </div>
+                            <div class="col-sm-12 mt-2">
+                                <div style="width: 463px;height: 48px;margin-left: 400px;margin-top: 10px;">
+                                    <button id="ubiiboton">Ubii</button>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
