[feat]: Adding Ubii Payments Button

--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -456,6 +456,9 @@
                 <div class="button">
                   <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Subscribir</button>
                 </div>
+                <div class="button">
+                  <button id="ubiiboton"></button>
+                </div>  
               </div> 
             </div>
           </div>
