--- a/src/app/administration/collection/collection-detail/collection-detail.component.html
+++ b/src/app/administration/collection/collection-detail/collection-detail.component.html
@@ -116,16 +116,14 @@
                             </div>
                             <br>
                             <div class="col-sm-12 mt-2">
-                                <div style="width: 463px;height: 48px;margin-left: 400px;margin-top: 10px;">
-                                <button [disabled]="loading || loading_cancel" class="btn company-detail-button btn-lg btn-block" type="button" (click)="addPayment()" *ngIf="bpago">
-                                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                    {{ "ADMINISTRATION.COLLECTION.ADDPAYMENT" | translate }}
-                                </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 mt-2">
-                                <div style="width: 463px;height: 48px;margin-left: 400px;margin-top: 10px;">
-                                    <button id="ubiiboton">Ubii</button>
+                                <div style="margin-top: 10px;">
+                                    <button style="width: 220px;height: 48px;margin-left: 100px;" [disabled]="loading || loading_cancel" class="btn company-detail-button btn-lg btn-block" type="button" (click)="addPayment()" *ngIf="bpago">
+                                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                        Agregar Pago Manual
+                                    </button>
+                                    <div style="width: 220px;height: 48px;margin-left: 100px;" class="button">
+                                        <button id="ubiiboton"></button>
+                                    </div> 
                                 </div>
                             </div>
                         </div>
