--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -258,7 +258,7 @@
                 <div class="col-md-4 mb-4 pb-2">
                   <div class="form-outline">
                     <label class="form-label required" for="form3Examplev4">Plan de RCV</label>
-                    <select formControlName="cplan" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cplan').errors }">
+                    <select formControlName="cplan" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cplan').errors }" (change)="functio()">
                       <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
                     </select>
                     <div *ngIf="submitted && search_form.get('cplan').errors" class="invalid-feedback">
@@ -407,6 +407,22 @@
                     </select>
                     <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-3 mb-4 pb-2" *ngIf="plan">
+                  <div class="form-outline">
+                    <label class="form-label " for="form3Examplev5">Vigencia</label>
+                    <select formControlName="ivigencia" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ivigencia').errors }" >
+                      <option value="1">Anual</option>
+                      <option value="2">3 Días</option>
+                      <option value="3">5 Días</option>
+                      <option value="4">7 Días</option>
+                      <option value="5">15 Días</option>
+                      <option value="6">30 Días</option>
+                    </select>
+                    <div *ngIf="submitted && search_form.get('ivigencia').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('ivigencia').errors.required">Se requiere completar el campo</div>
                     </div>
                   </div>
                 </div>
