--- a/src/app/administration/bill-loading/bill-loading.component.html
+++ b/src/app/administration/bill-loading/bill-loading.component.html
@@ -153,28 +153,26 @@
                         <div class="card" style="margin-left: 65px;">
                             <div class="card-header company-card-header">
                                 <div class="row">
-                                    <div class="col-6" style="margin-left: 250px; font-weight: bolder;">
+                                    <div class="col-6" style="font-weight: bolder;">
                                         Lista de Ordenes de Servicios 
                                     </div>
                                     <div class="col-6">
-                                        <button [disabled]="loading || loading_cancel || !editStatus" class="btn company-detail-button float-right mr-1" type="button" (click)="addServiceOrder()">
+                                        <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="addServiceOrder()">
                                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                            Añadir Orden
+                                            Añadir Ordenes
                                         </button>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <form [formGroup]="bill_form">
-                                    <div class="container">
-                                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
-                                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="200" [sortable]="true"></ag-grid-column>
-                                            <ag-grid-column headerName="Observacion" field="xobservacion" [width]="300" [sortable]="true"></ag-grid-column>
-                                            <ag-grid-column headerName="Daños" field="xdanos" [width]="280" [sortable]="true"></ag-grid-column>
-                                            <ag-grid-column headerName="Fecha ajuste" field="fajuste" [width]="240" [sortable]="true"></ag-grid-column>
-                                        </ag-grid-angular>
-                                    </div>
-                                </form>
+                                <div class="container">
+                                    <ag-grid-angular #agGrid style="width: 100%; height: 330px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
+                                        <ag-grid-column headerName="Codigo" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Servicio" field="xservicio" [width]="120" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Monto grúa" field="mmontototal" [width]="130" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="130" [sortable]="true"></ag-grid-column>
+                                    </ag-grid-angular>
+                                </div>
                             </div>
                         </div>
                         <div class="card" style="margin-left: 65px;margin-top: 26px;">
